<resources>

    <string name="scale_up_show_behavior">winter.zxb.smilesb101.coderhome.View.Behaviour.ShowTopBehaviour</string>

    <string name="app_name">码农之家</string>

    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_format">类型：%s</string>
    <string name="athor_format">作者：%s</string>
    <string name="publishAt_format">发布于：%s</string>
    <string name="GanioName">干 货</string>
    <string name="ZhiHuName">知 乎</string>
    <string name="MusicName">音 乐</string>
    <string name="ZiXunName">资 讯</string>
    <string name="NewsName">新 闻</string>
    <string name="doubanName">豆 瓣</string>
    <string name="ComicName">漫 画 - 小 说</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="home">首页</string>
    <string name="discory">发现</string>
    <string name="watch">关注</string>
    <string name="caogao">草稿</string>
    <string name="title_activity_skin">个性换肤</string>
    <string name="developTeam">开发团队</string>
    <string name="opeansource">开源许可</string>
    <string name="lastWords">最后说几句</string>
    <string name="tulingRabit">图灵机器人</string>
</resources>
