<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home"></item>

        <item
            android:id="@+id/nav_discory"
            android:icon="@mipmap/discory"
            android:title="@string/discory"></item>

        <item
            android:id="@+id/nav_watch"
            android:icon="@mipmap/watch"
            android:title="@string/watch"></item>

        <item
            android:id="@+id/nav_caogao"
            android:icon="@mipmap/caogao_"
            android:title="@string/caogao"></item>
    </group>
<item android:title="个性化">
    <menu>
        <item
            android:id="@+id/nav_skin"
            android:icon="@mipmap/skin_blue"
            android:title="个性换肤"/>
    </menu>
</item>

    <group android:id="@+id/system">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/share"
            android:title="分享"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@mipmap/callback"
            android:title="反馈"/>

        <item
             android:id="@+id/nav_about"
             android:icon="@mipmap/about"
             android:title="关于"/>
    </group>

</menu>
