<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="developTeamAdapter"
            type="winter.zxb.smilesb101.coderhome.View.Adapter.AboutProgrammRecyclerAdapter"/>
        <variable
            name="opensourceAdapter"
            type="winter.zxb.smilesb101.coderhome.View.Adapter.AboutProgrammRecyclerAdapter"/>
        <variable
            name="aboutbean"
            type="winter.zxb.smilesb101.coderhome.Bean.ProgrammAboutBean"/>
    </data>

<android.support.design.widget.CoordinatorLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="winter.zxb.smilesb101.coderhome.View.Activitys.AboutProgrammAvtivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">
                <ImageView
                    android:id="@+id/appIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp"/>
                <TextView
                    android:id="@+id/app_name"
                    android:layout_below="@+id/appIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@{aboutbean.programm_name}"
                    android:layout_centerHorizontal="true"
                    android:typeface="monospace"
                    android:textColor="?attr/titleColor"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:text="@{aboutbean.programm_desc}"
                    android:id="@+id/app_desc"
                    android:layout_below="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:typeface="monospace"
                    android:textColor="?attr/titleColor"
                    android:layout_marginBottom="15dp"
                    android:textSize="14sp"/>

                <TextView
                    android:text="@{aboutbean.programm_version}"
                    android:id="@+id/app_version"
                    android:layout_below="@+id/app_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:typeface="monospace"
                    android:textColor="?attr/contentColor"
                    android:layout_marginBottom="15dp"
                    android:textSize="14sp"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?attr/titleColor"></LinearLayout>

            <!--开发团队-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <ImageView
                android:src="@mipmap/team"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textAlignment="gravity"
                android:typeface="monospace"
                android:textColor="?attr/titleColor"
                android:textSize="14sp"
                android:text="@string/developTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>
            
            <android.support.v7.widget.RecyclerView
                android:id="@+id/develop_rv"
                app:adapter="@{developTeamAdapter}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            <!--开源许可-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:src="@mipmap/opensource"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textAlignment="gravity"
                    android:typeface="monospace"
                    android:textColor="?attr/titleColor"
                    android:textSize="14sp"
                    android:text="@string/opeansource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/open_source_rv"
                app:adapter="@{opensourceAdapter}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="?attr/titleColor"></LinearLayout>

            <!--结语-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:src="@mipmap/last"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:textAlignment="gravity"
                    android:typeface="monospace"
                    android:textColor="?attr/titleColor"
                    android:textSize="14sp"
                    android:text="@string/lastWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:typeface="monospace"
               android:textColor="?attr/titleColor"
               android:textSize="14sp"/>

            
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
</layout>
